attempt to fix safari flicker

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --transition-speed: 250ms
+  --transition-speed: 250ms;
 }
 
 .slider-wrapper {
@@ -16,7 +16,26 @@
   will-change: transform;
   transition: transform var(--transition-speed) ease-out;
   cursor: grab;
-	cursor: col-resize;
+  cursor: col-resize;
+
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+
+  -webkit-overflow-scrolling: touch !important;
+
+  will-change: transform;
 }
 
 .slide {
@@ -29,9 +48,29 @@
 .slide .slide-contents {
   max-width: 100%;
   max-height: 100%;
-  transition: transform var(--transition-speed) ease-in-out;
   user-select: none;
   /* object-fit: cover; */
+
+  transition: transform var(--transition-speed) ease-in-out;
+
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+
+  -webkit-overflow-scrolling: touch !important;
+
+  will-change: transform;
 }
 
 .grabbing {
